--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "aos": "^2.3.4",
+    "firebase": "^11.1.0",
     "flowbite": "^2.5.2",
     "localforage": "^1.10.0",
     "match-sorter": "^8.0.0",
@@ -19,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2",
     "react-tooltip": "^5.28.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.15"
